# MScore

./: .gitignore  MScore.sln
MScore/: .gitignore  App.xaml  App.xaml.cs  IDD_FORMVIEW.cpp  IDD_FORMVIEW.h  MScore.cpp  MScore.csproj  MScore.rc  MScore.vcxproj  MScore.vcxproj.filters  MainWindow.xaml  MainWindow.xaml.cs  Resource.h  stdafx.cpp
MScore/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
MScore/src/: verovio.cpp  verovio_adp.cpp  wildmidi.cpp
MScore/tools/: ALL_BUILD.vcxproj  INSTALL.vcxproj  INSTALL.vcxproj.filters  MScore.sln  MScore.vcxproj  MScore.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  headers.vcxproj  headers.vcxproj.filters
MScore/tools/MScore.dir/Debug/MScore.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MScore.lastbuildstate  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
MScore/tools/Win32/Debug/ALL_BUILD/ALL_BUILD.tlog/: custombuild.command.1.tlog
MScore/tools/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
bindings/android/app/: build.gradle
bindings/android/app/src/androidTest/java/com/pianoclick/mscore/: ExampleInstrumentedTest.java
bindings/android/app/src/main/: AndroidManifest.xml
bindings/android/app/src/main/java/com/pianoclick/mscore/: MainActivity.java
bindings/android/app/src/main/res/layout/: activity_main.xml  content_main.xml
bindings/android/app/src/main/res/menu/: menu_main.xml
bindings/android/app/src/main/res/values/: strings.xml
bindings/android/app/src/test/java/com/pianoclick/mscore/: ExampleUnitTest.java
bindings/android/gradle/wrapper/: gradle-wrapper.properties
bindings/netcore/score/: score.sln
bindings/netcore/score/score/: Program.cs  score.csproj
bindings/vc/mscore/: mscore.sln
bindings/vc/mscore/mscore/: Resource.h  mscore.cpp  mscore.rc  mscore.vcxproj  mscore.vcxproj.filters  stdafx.cpp
cs/lib/verovio-cs/: verovio-cs.sln
cs/lib/verovio-cs/verovio-cs/: AssemblyInfo.cpp  verovio-cs.cpp  verovio-cs.h  verovio-cs.vcxproj  verovio-cs.vcxproj.filters
cs/lib/verovio-cs/verovio-cs/include/vrvcs/: toolkit.h
cs/lib/verovio-cs/verovio-cs/src/: toolkit.cpp
sample/: Webern_VariationsforPiano.mid
src/: MScore.cpp
tools/: CMakeLists.txt
